<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#67497A">

    <TextView
        android:id="@+id/heading"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/newFormatText"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="35sp"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="casual"
        android:text="@string/dobroPozhalText"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <TextView
        android:id="@+id/input"
        android:layout_height="370dp"
        android:layout_width="320dp"
        android:layout_marginTop="80dp"
        android:background="#f6dfff"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:autofillHints="username"
        android:hint="@string/loginText"
        android:textColorHint="#666666"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:textColorHint="#666666"
        android:hint="@string/passwordText"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#67497A"
        android:text="@string/enterText"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/regisyrText"
        android:textSize="18sp"
        android:fontFamily="serif-monospace"
        android:textColorHint="#67497A"
        android:backgroundTint="#f6dfff"
        app:layout_constraintTop_toBottomOf="@+id/enter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="#67497A"
        android:text="@string/podderzhkaText"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>